Bug 1420427 - Stop using native charset in URLPreloader. r=kmag, a=ritu

MozReview-Commit-ID: 5CidUcXLCjP

--HG--
extra : source : 345fe119b8cfd315bee3de6c93fd748a92801a62
extra : intermediate-source : c9aaf387d44f25ebaf6e4e3486b1a1bb77e8d5cc